--- a/box_calibration/box_calibration/calibration/hdr/hdr_front.yaml
+++ b/box_calibration/box_calibration/calibration/hdr/hdr_front.yaml
@@ -1,23 +1,23 @@
-# Created using 
+#Calibration program comments:#Generated with data of ROS time: 2024-11-10 20:28:04.856192133
 camera_matrix:
   cols: 3
-  data: [985.4988959683002, 0.0, 951.7951540236218, 0.0, 985.0345259264463, 638.1277851270817,
+  data: [980.0180626953028, 0.0, 952.1174442363357, 0.0, 980.0365473997786, 639.3542006786158,
     0.0, 0.0, 1.0]
   rows: 3
-camera_name: hdr_front
 distortion_coefficients:
   cols: 4
-  data: [-0.06128735464895917, 0.002519967603127806, -0.0004234411942798146, -0.0001813813666995525]
+  data: [-0.05953556706847572, 0.005762458053253421, -0.005995751935293936, 0.002083476137376189]
   rows: 1
 distortion_model: equidistant
 image_height: 1280
 image_width: 1920
 projection_matrix:
   cols: 4
-  data: [985.4988959683002, 0.0, 951.7951540236218, 0.0, 0.0, 985.0345259264463, 638.1277851270817,
+  data: [980.0180626953028, 0.0, 952.1174442363357, 0.0, 0.0, 980.0365473997786, 639.3542006786158,
     0.0, 0.0, 0.0, 1.0, 0.0]
   rows: 3
 rectification_matrix:
   cols: 3
   data: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
   rows: 3
+rostopic: /gt_box/hdr_front/image_raw
