--- a/box_calibration/box_calibration/calibration/hdr/hdr_left.yaml
+++ b/box_calibration/box_calibration/calibration/hdr/hdr_left.yaml
@@ -1,23 +1,23 @@
-# Created using 
+#Calibration program comments:#Generated with data of ROS time: 2024-11-10 20:28:04.856192133
 camera_matrix:
   cols: 3
-  data: [988.8923536280431, 0.0, 943.7591054418368, 0.0, 988.8293478212719, 637.9515648497322,
+  data: [983.0960889756288, 0.0, 942.9590303431195, 0.0, 983.4549034260549, 638.0003603354215,
     0.0, 0.0, 1.0]
   rows: 3
-camera_name: hdr_left
 distortion_coefficients:
   cols: 4
-  data: [-0.06030703659094236, -0.0002728912741566539, 0.001678775877231905, -0.0008128418589013854]
+  data: [-0.06038908640084122, 0.009183489716881441, -0.009875624826621993, 0.003546851011425042]
   rows: 1
 distortion_model: equidistant
 image_height: 1280
 image_width: 1920
 projection_matrix:
   cols: 4
-  data: [988.8923536280431, 0.0, 943.7591054418368, 0.0, 0.0, 988.8293478212719, 637.9515648497322,
+  data: [983.0960889756288, 0.0, 942.9590303431195, 0.0, 0.0, 983.4549034260549, 638.0003603354215,
     0.0, 0.0, 0.0, 1.0, 0.0]
   rows: 3
 rectification_matrix:
   cols: 3
   data: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
   rows: 3
+rostopic: /gt_box/hdr_left/image_raw
