--- a/box_calibration/box_calibration/calibration/hdr/hdr_right.yaml
+++ b/box_calibration/box_calibration/calibration/hdr/hdr_right.yaml
@@ -1,23 +1,23 @@
-# Created using 
+#Calibration program comments:#Generated with data of ROS time: 2024-11-10 20:28:04.856192133
 camera_matrix:
   cols: 3
-  data: [984.8108765606985, 0.0, 948.0299833389848, 0.0, 984.5548499772359, 636.7107836495178,
+  data: [982.6442397483147, 0.0, 946.6235853210645, 0.0, 982.9392282559475, 636.6521558617322,
     0.0, 0.0, 1.0]
   rows: 3
-camera_name: hdr_right
 distortion_coefficients:
   cols: 4
-  data: [-0.05944980037681293, 0.00211175431524659, -0.001421318966532574, 0.0003427352632818362]
+  data: [-0.05832922459326879, -0.002291962245711132, 0.0045265497613087, -0.002163701099794872]
   rows: 1
 distortion_model: equidistant
 image_height: 1280
 image_width: 1920
 projection_matrix:
   cols: 4
-  data: [984.8108765606985, 0.0, 948.0299833389848, 0.0, 0.0, 984.5548499772359, 636.7107836495178,
+  data: [982.6442397483147, 0.0, 946.6235853210645, 0.0, 0.0, 982.9392282559475, 636.6521558617322,
     0.0, 0.0, 0.0, 1.0, 0.0]
   rows: 3
 rectification_matrix:
   cols: 3
   data: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
   rows: 3
+rostopic: /gt_box/hdr_right/image_raw
