--- a/box_calibration/box_calibration/calibration/zed2i/zed_left.yaml
+++ b/box_calibration/box_calibration/calibration/zed2i/zed_left.yaml
@@ -1,23 +1,23 @@
-# Created using
+#Calibration program comments:#Generated with data of ROS time: 2024-11-10 20:28:04.856192133
 camera_matrix:
   cols: 3
-  data: [1061.740573234219, 0.0, 953.9096380470181, 0.0, 1062.408051107584, 554.1277931949547,
+  data: [1062.02434299971, 0.0, 953.8543851272188, 0.0, 1062.28088780565, 550.7954283793197,
     0.0, 0.0, 1.0]
   rows: 3
-camera_name: zed2i_left_camera_optical_frame
 distortion_coefficients:
   cols: 4
-  data: [-0.05181857036158625, 0.01837924564205111, 0.000560171411067156, -0.0001044606074266749]
+  data: [-0.05825970795006653, 0.02247431251342415, 0.0004016516762062654, 8.985968117413353e-05]
   rows: 1
 distortion_model: radtan
-image_height: 1080
+image_height: 1280
 image_width: 1920
 projection_matrix:
   cols: 4
-  data: [1061.740573234219, 0.0, 953.9096380470181, 0.0, 0.0, 1062.408051107584, 554.1277931949547,
+  data: [1062.02434299971, 0.0, 953.8543851272188, 0.0, 0.0, 1062.28088780565, 550.7954283793197,
     0.0, 0.0, 0.0, 1.0, 0.0]
   rows: 3
 rectification_matrix:
   cols: 3
   data: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
   rows: 3
+rostopic: /gt_box/zed2i_driver_node/left_raw/image_raw_color
