--- a/box_configuration/jetson/01-network-manager-all.yaml
+++ b/box_configuration/jetson/01-network-manager-all.yaml
@@ -7,9 +7,7 @@ network:
         - 192.168.2.51/24
       dhcp4: no
     mgbe1:
-      addresses:
-        - 192.168.20.1/24
-      dhcp4: no
+      dhcp4: yes
     usb0:
       addresses:
         - 192.168.2.33/28
