--- a/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
+++ b/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
@@ -1,5 +1,9 @@
-# #Generated with data of ROS time: 2024-11-10 20:28:04.856192133
-# #LiDAR Calibration Data Time: 2024-11-10T20:32:20.953884
+calibration_metadata:
+  camera:  2024-11-10-20-28-04
+  lidar: 2024-11-10-20:32:20
+  imu: cad
+  prism: cad
+
 alphasense_base_to_alphasense_front_center:
   pitch: 0.0
   roll: 0.0
