--- a/box_bringup/bringup_alphasense/core_research/config/ncamera_settings_calib_imu.yaml
+++ b/box_bringup/bringup_alphasense/core_research/config/ncamera_settings_calib_imu.yaml
@@ -22,7 +22,7 @@ camera_config: &standard_camera_config
   # Extra configuration.
   rotate_image: false               # true/false
 
-camera_config: &camera_1_config
+camera_config: &standard_camera_config_rotated
   # Exposure control.
   manual_exp_time_us: 10000         # 10 - 65000
   auto_exposure_enabled: true       # true/false
@@ -44,11 +44,7 @@ camera_config: &camera_1_config
   autoexp_end_col: -1               # -1 - 719/1439
 
   # Extra configuration.
-  rotate_image: false               # true/false
-
-  # Force exposure parameters of stereo-pairs to be equal.
-  autoexp_master_camera_index: 0
-
+  rotate_image: true               # true/false
 
 
 camera_config: &camera_config_follower
@@ -73,9 +69,33 @@ camera_config: &camera_config_follower
   autoexp_end_col: -1               # -1 - 719/1439
 
   # Extra configuration.
-  rotate_image: true               # true/false
+  rotate_image: false               # true/false
   autoexp_master_camera_index: 2
 
+camera_config: &camera_config_follower_rotated
+  # Exposure control.
+  manual_exp_time_us: 10000         # 10 - 65000
+  auto_exposure_enabled: true       # true/false
+  min_exp_time_us: 50               # 10 - 65000
+  max_exp_time_us: 10000            # 10 - 65000
+  autoexp_speed: 10                 # 1 - 10
+  autoexp_target_median: 70         # 0 - 255
+
+  # Gain control.
+  auto_gain_enabled: false          # true/false
+  autoexp_max_gain : 255            # 0 - 255
+  manual_gain: 1                    # 0 - 255
+
+  # Auto exposure ROI control.
+  auto_exposure_roi_enabled: false  # true/false
+  autoexp_start_row: 0              # 0 - 539/1079
+  autoexp_end_row: -1               # -1 - 539/1079
+  autoexp_start_col: 0              # 0 - 719/1439
+  autoexp_end_col: -1               # -1 - 719/1439
+
+  # Extra configuration.
+  rotate_image: true               # true/false
+  autoexp_master_camera_index: 2
 
 ncamera:
   # Measurement rates.
@@ -96,6 +116,6 @@ ncamera:
   num_cams: 4                     # 1 - 8
   cams:
     0: *standard_camera_config
-    1: *standard_camera_config            # Front middle
-    2: *standard_camera_config            # Front right
-    3: *camera_config_follower            # Front left
+    1: *standard_camera_config_rotated            # Front middle
+    2: *standard_camera_config_rotated            # Front right
+    3: *camera_config_follower_rotated            # Front left
