--- a/box_calibration/box_calibration/CMakeLists.txt
+++ b/box_calibration/box_calibration/CMakeLists.txt
@@ -1,7 +1,16 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(box_calibration)
-find_package(catkin REQUIRED)
-catkin_package()
+find_package(catkin REQUIRED COMPONENTS
+        rospy
+        std_msgs
+        sensor_msgs
+)
+catkin_python_setup()
+
+catkin_package(
+        CATKIN_DEPENDS rospy std_msgs sensor_msgs
+)
+
 # Install Python scripts
 install(PROGRAMS
         scripts/convert_ceres_camera_output_to_kalibr_style.py
