--- a/box_calibration/box_calibration/calibration/allan_variances/ap20/imu.yaml
+++ b/box_calibration/box_calibration/calibration/allan_variances/ap20/imu.yaml
@@ -6,6 +6,6 @@ accelerometer_random_walk: 2.389462521335419e-05
 gyroscope_noise_density: 0.00017808717694266127
 gyroscope_random_walk: 1.6719529569193707e-06
 
-rostopic: '/gt_box/ap20/imu' #Make sure this is correct
+rostopic: '/gt_box/ap20/imu_debug' #Make sure this is correct
 update_rate: 200.0 #Make sure this is correct
 
