--- a/box_calibration/box_calibration/package.xml
+++ b/box_calibration/box_calibration/package.xml
@@ -6,6 +6,9 @@
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>rospy</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
   <export>
   </export>
 </package>
