Add front alphasense recording to calib_imu and calib_imu_lidar yaml

--- a/box_utils/box_recording/cfg/calib_imu.yaml
+++ b/box_utils/box_recording/cfg/calib_imu.yaml
@@ -16,3 +16,7 @@ nuc:
       - /tf_static
     cpt7_local:
       - cpt7_local
+    alphasense:
+      - /gt_box/alphasense_driver_node/cam1
+      - /gt_box/alphasense_driver_node/cam2
+      - /gt_box/alphasense_driver_node/cam3
