--- a/box_utils/box_recording/cfg/calib_imu_lidar.yaml
+++ b/box_utils/box_recording/cfg/calib_imu_lidar.yaml
@@ -20,7 +20,7 @@ nuc:
       - /tf_static
     cpt7_local:
       - cpt7_local
-=    alphasense:
+    alphasense:
       - /gt_box/alphasense_driver_node/cam1
       - /gt_box/alphasense_driver_node/cam2
       - /gt_box/alphasense_driver_node/cam3
