--- a/.gitmodules
+++ b/.gitmodules
@@ -50,15 +50,19 @@
 	path = box_drivers/adi_imu_driver
 	url = git@github.com:leggedrobotics/adi_imu_driver.git
 	branch = main
-[submodule "box_drivers/tf_bag"]
+[submodule "box_drivers_ros2/ros1_bridge"]
+	path = box_drivers_ros2/ros1_bridge
+	url = git@github.com:leggedrobotics/ros1_bridge.git
+	branch = master
+[submodule "box_applications/tf_bag"]
 	path = box_applications/tf_bag
 	url = git@github.com:leggedrobotics/tf_bag.git
 	branch = master
-[submodule "box_drivers/graph_msf_dev"]
+[submodule "box_applications/graph_msf_dev"]
 	path = box_applications/graph_msf_dev
 	url = git@bitbucket.org:leggedrobotics/graph_msf_dev.git
 	branch = feature/gt_generation
-[submodule "box_drivers/open3d_slam_private"]
+[submodule "box_applications/open3d_slam_private"]
 	path = box_applications/open3d_slam_private
 	url = git@github.com:leggedrobotics/open3d_slam_private.git
 	branch = dev/grandtour
@@ -66,10 +70,6 @@
 	path = box_applications/wavemap
 	url = git@github.com:ethz-asl/wavemap.git
 	branch = feature/alma
-[submodule "box_drivers_ros2/ros1_bridge"]
-	path = box_drivers_ros2/ros1_bridge
-	url = git@github.com:leggedrobotics/ros1_bridge.git
-	branch = master
 [submodule "box_applications/elevation_mapping_cupy"]
 	path = box_applications/elevation_mapping_cupy
 	url = git@github.com:leggedrobotics/elevation_mapping_cupy.git
@@ -78,7 +78,7 @@
 	path = box_applications/dlio
 	url = git@github.com:leggedrobotics/dlio.git
 	branch = grandtour
-
 [submodule "box_applications/evo"]
 	path = box_applications/evo
 	url = git@github.com:leggedrobotics/evo.git
+	branch = master
