--- a/box_launch/tmux/opc_recording.yaml
+++ b/box_launch/tmux/opc_recording.yaml
@@ -20,6 +20,7 @@ windows:
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
             $(rospack find box_rviz)/launch/recording.launch
+            $(rospack find anymal_d_simple_description)/launch/load.launch
             "
           load_launch_files:="
             $(rospack find box_rviz)/launch/multiplot.launch
