--- a/box_launch/tmux/jetson_recording.yaml
+++ b/box_launch/tmux/jetson_recording.yaml
@@ -17,7 +17,7 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - roslaunch bringup_fkie fkie.launch
+      - roslaunch bringup_fkie fkie_jetson.launch
           autostart_launch_files:="
             $(rospack find box_health)/launch/box_health.launch
             $(rospack find bringup_ap20)/launch/ap20.launch
@@ -34,6 +34,3 @@ windows:
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/jetson/alias.sh  
       - df -h /data
       focus: true
-#     - shell_command:
-#       - sleep 1
-#       - l-docker hdr_start
